--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,11 @@ name = "TimingDebug"
 uuid = "9ca4fea4-e9d7-4fc5-83e1-97a855f29d1d"
 authors = ["Prateek Ganguli <prateek.ganguli@gmail.com>"]
 version = "0.1.0"
+
+[deps]
+ControlSystemsBase = "aaaaaaaa-a6ca-5380-bf3e-84a91bcd477e"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+
+[compat]
+ControlSystemsBase = "1.14.5"
+LinearAlgebra = "1.11.0"
